﻿Change Log
==========

0.9.0 RC4
---------

Changed
- Bug Fixes
 - Fix a bug to allow OrderByVariable to take variable name with/without leading ?/$
 - Fix a bug in SparqlJsonParser relating to some valid data being rejected due to Json.Net perculiarities
 - Fix a bug in the streaming mode of the RDF/XML parser not respecting external Base URI
 - Fix a corner case bug in interaction between GRAPH clause and inner patterns that match but have no variables
 - Fix a corner base base in interaction between GRAPH clauses and property paths
- Dependencies
 - Externalized the VDS.Web.Server library as a dependency version 1.0.0
 - Updated VDS.Common to 1.1.1
- Build
 - Improved our test architecture significantly
 - NuGet packages now include PDBs to aid consumers in debugging issues with dotNetRDF

0.8.2 RC3
---------

Changed
- Bug Fixes
 - Fixed a subtle bug in GraphCollection caused by the previous fix in 0.8.1 RC2
 - Fixed a bug with ToLiteral() not using the invariant culture
- Dependencies
 - Updated VDS.Common to 1.1.0
 - Corrected NuGet dependency on Json.Net to 4.5.11 to match our builds

0.8.1 RC2
---------

Changed
- Bug Fixes
 - Fixed a critical bug in GraphCollection caused by a change in a dependency that wasn't caught by our existing
   regression tests

0.8.0 RC1
---------

Added

Changed
- Bug Fixes
 - Fixed an internal API inconsistency
 - Fixed a bug in the BNODE() function
 - Fixed a bug in Extend that could occur when many Extends were nested together
 - Fixed an intermittent race condition in the implementation of parallel Left Join
 - Fixed a bug in the evaluation of some complex GROUP BY statements
 - Fixed a bug in the string representation of CountDistinctAggregate
 - Fixed a bug related to losing FILTERS when building queries using the internal APIs
 - Fixed a bug related to ToString() form of some API built queries
 - Fixed a bug related to graph scoping of full text search